# rust-vless-proxy

./: .dockerignore  .env.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.client  Dockerfile.server  LICENSE  README.md  docker-compose.yml  setup.sh
.github/workflows/: docker.yml
crates/client/: Cargo.toml
crates/client/src/: dpi.rs  fragment_stream.rs  main.rs  socks5.rs  tunnel.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: protocol.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  server.rs
