[package]
name = "viavless-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "viavless-server"
path = "src/main.rs"

[dependencies]
viavless-protocol = { path = "../protocol" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = "0.3"
rustls-pemfile = "2"
rustls-pki-types = "1"
anyhow = { workspace = true }
subtle = { workspace = true }
